FIX: Restore layout position & Chart visibility & Bump v18

--- a/style.css
+++ b/style.css
@@ -41,13 +41,27 @@ body {
 
 @keyframes slideDown {
     from {
-        transform: translate(-50%, -100%);
+        transform: translateY(-100%) translateX(-50%);
         opacity: 0;
         filter: blur(10px);
     }
 
     to {
-        transform: translate(-50%, 0);
+        transform: translateY(0) translateX(-50%);
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
+@keyframes slideDownFull {
+    from {
+        transform: translateY(-100%);
+        opacity: 0;
+        filter: blur(10px);
+    }
+
+    to {
+        transform: translateY(0);
         opacity: 1;
         filter: blur(0);
     }
@@ -55,13 +69,13 @@ body {
 
 @keyframes slideUp {
     from {
-        transform: translate(-50%, 100%);
+        transform: translateY(100%) translateX(-50%);
         opacity: 0;
         filter: blur(10px);
     }
 
     to {
-        transform: translate(-50%, 0);
+        transform: translateY(0) translateX(-50%);
         opacity: 1;
         filter: blur(0);
     }
